<resources>
    <string name="app_name">2023_PDM115_G1</string>
    <string name="title_inicio_sesion">Iniciar Sesion</string>
    <string name="user_name">Usuario</string>
    <string name="user_pass">Contraseña</string>
    <string name="logon">Registrar</string>
    <string name="login_anom">Ingres Anonimo</string>
    <string name="login">Ingresar</string>
    <string name="title_registrar_usuario">Registrar Usuario</string>
    <string name="user_nombre">Nombre</string>
    <string name="user_apellido">Apellido</string>
    <string name="user_identificacion">Identificacion</string>
    <string name="user_sexo">Genero</string>
    <string name="asd">asd</string>
    <string name="title_ver_ciclo">Ciclos</string>
    <string name="btn_crear_ciclo">Registrar Ciclo</string>
    <string name="btn_editar">Editar</string>
    <string name="btn_eliminar">Eliminar</string>
    <string name="title_ver_coordinadores">Coordinadores</string>
    <string name="btn_crear_coordinador">Crear Coordinador</string>
    <string name="title_ver_curso">Cursos</string>
    <string name="btn_crear_curso">Crear Curso</string>
    <string name="title_ver_docente">Docentes</string>
    <string name="btn_crear_docente">Crear Docente</string>
    <string name="title_ver_evaluacion">Evaluaciones</string>
    <string name="btn_crear_evaluacion">Crear Evaluacion</string>
    <string name="title_ver_materia">Materias</string>
    <string name="btn_crear_materia">Crear Materia</string>
    <string name="title_ver_tipo_evaluacion">Tipos de Evaluacion</string>
    <string name="btn_crear_tipo_evaluacion">Crear Tipo Evaluacion</string>
    <string name="registrar_ciclo_numero">numero ciclo</string>
    <string name="registrar_ciclo_anio">año ciclo</string>
    <string name="save">guardar</string>
    <string name="registrar_coordinador_persona">persona</string>
    <string name="registrar_coordinador_fecha">Fecha Ingreso</string>
    <string name="registrar_curso_ciclo">ciclo</string>
    <string name="registrar_curso_materia">materia</string>
    <string name="registrar_curso_docente">docente</string>
    <string name="registrar_curso_coordinador">coordinador</string>
    <string name="curso">curso</string>
    <string name="tipo_evaliacion">tipo evaluacion</string>
    <string name="numero_evaluacion">numero_evaluacion</string>
    <string name="nombre_materia">nombre materia</string>
    <string name="btn_crear_persona">Registrar Persona</string>
    <string name="nombre_tipo_evaluacion">Nombre tipo de evaluacion</string>
    <string name="btn_crear_parametros">Parametros</string>
    <string name="registrar_dias_revision">Dias Maximos para Revision</string>
    <string name="registrar_dias_diferir">Dias Maximos para Diferir</string>
    <string name="registrar_dias_repetir">Dias Maximos para Repetir</string>
    <string name="update">Actualizar</string>
    <string name="title_ver_solicitud_revision">Solicitudes de Revision</string>
    <string name="btn_crear_solicitud_revision">Crear Solicitud</string>
    <string name="inscripcion">Inscripcion</string>
    <string name="evaluacion">Evaluacion</string>
    <string name="estado_revision">Estado de Revision</string>
    <string name="motivo">Motivo</string>
    <string name="fecha_creacion">Fecha de Creacion</string>
    <string name="title_ver_impresion">Impresion de evaluacion</string>
    <string name="btn_crear_impresion">Crear Control de Impresion</string>
    <string name="btn_editar_observacion">Editar Observaciones</string>
    <string name="btn_crear_motivo_impresion">Crear motivo\nerror de impresion</string>
    <string name="motivos_de_error">motivos de error</string>
    <string name="observation">Observacion</string>
    <string name="inicio">Guelcom</string>
    <string name="btn_ver_parametros">Ver Parametros</string>
    <string name="btn_ver_evaluaciones">Ver Evaluaciones</string>
    <string name="cruds">Lista de Cruds</string>
    <string name="alumno">Alumno</string>
    <string name="cargar_datos">Cargar Datos de Prueba</string>
    <string name="title_ver_alumnos">Alumnos</string>
    <string name="btn_crear_alumno">Crear Alumno</string>
    <string name="carnet">Carnet de Alumno</string>
    <string name="btn_ver_room">Room/SQLITE</string>
    <string name="btn_ver_rest">Servicios Web</string>
    <string name="opcion_data">Elije una opcion para manejar los datos</string>
</resources>